Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23597

Random crashes when parsing or editing a qmake project

XMLWordPrintable

    • macOS

      Process: Qt Creator [47059]
      Path: /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator
      Identifier: org.qt-project.qtcreator
      Version: 4.11.1 (4.11.1)
      Code Type: X86-64 (Native)

      Crashed Thread: 0 Dispatch queue: com.apple.main-thread

      Exception Type: EXC_BAD_ACCESS (SIGSEGV)
      Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000
      Exception Note: EXC_CORPSE_NOTIFY

      Termination Signal: Segmentation fault: 11
      Termination Reason: Namespace SIGNAL, Code 0xb
      Terminating Process: exc handler [47059]

      VM Regions Near 0:
      -->
      __TEXT 000000010fed8000-000000010feec000 [ 80K] r-x/rwx SM=COW /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0 libProjectExplorer.dylib 0x0000000115d6e965 ProjectExplorer::FolderNode::findProjectNode(std::__1::function<bool (ProjectExplorer::ProjectNode const*)> const&) + 21
      1 libQmakeProjectManager.dylib 0x000000011ca23ddf QmakeProjectManager::Internal::ProFileEditorWidget::checkForPrfFile(QString const&) const + 239
      2 libQmakeProjectManager.dylib 0x000000011ca24bf0 QmakeProjectManager::Internal::ProFileEditorWidget::findLinkAt(QTextCursor const&, std::__1::function<void (Utils::Link const&)>&&, bool, bool) + 2096
      3 libTextEditor.dylib 0x0000000115952a87 TextEditor::Internal::TextEditorWidgetPrivate::updateLink() + 167
      4 org.qt-project.QtCore 0x0000000111183def QObject::event(QEvent*) + 943
      5 org.qt-project.QtWidgets 0x00000001102485ba QApplicationPrivate::notify_helper(QObject*, QEvent*) + 266
      6 org.qt-project.QtWidgets 0x0000000110249a46 QApplication::notify(QObject*, QEvent*) + 598
      7 org.qt-project.QtCore 0x0000000111158ae4 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 212
      8 org.qt-project.QtCore 0x0000000111159cd9 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 809
      9 libqcocoa.dylib 0x00000001136f6139 0x1136be000 + 229689
      10 libqcocoa.dylib 0x00000001136f68a8 0x1136be000 + 231592
      11 com.apple.CoreFoundation 0x00007fff53986e33 _CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION_ + 17
      12 com.apple.CoreFoundation 0x00007fff53986dd9 __CFRunLoopDoSource0 + 108
      13 com.apple.CoreFoundation 0x00007fff5396a79b __CFRunLoopDoSources0 + 195
      14 com.apple.CoreFoundation 0x00007fff53969d65 __CFRunLoopRun + 1189
      15 com.apple.CoreFoundation 0x00007fff5396966e CFRunLoopRunSpecific + 455
      16 com.apple.HIToolbox 0x00007fff52bc81ab RunCurrentEventLoopInMode + 292
      17 com.apple.HIToolbox 0x00007fff52bc7ee5 ReceiveNextEventCommon + 603
      18 com.apple.HIToolbox 0x00007fff52bc7c76 _BlockUntilNextEventMatchingListInModeWithFilter + 64
      19 com.apple.AppKit 0x00007fff50f6077d _DPSNextEvent + 1135
      20 com.apple.AppKit 0x00007fff50f5f46b -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1361
      21 com.apple.AppKit 0x00007fff50f59588 -[NSApplication run] + 699
      22 libqcocoa.dylib 0x00000001136f5623 0x1136be000 + 226851
      23 org.qt-project.QtCore 0x0000000111154b6f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431
      24 org.qt-project.QtCore 0x00000001111590f2 QCoreApplication::exec() + 130
      25 org.qt-project.qtcreator 0x000000010fee4016 main + 15318
      26 libdyld.dylib 0x00007fff7f8f13d5 start + 1

        For Gerrit Dashboard: QTCREATORBUG-23597
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            ritt.ks Konstantin Ritt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes